feat: Prepare backend for Render deployment

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-DB_URL=mysql+pymysql://root:Siva%402005@localhost:3306/wiki_quiz
+DB_URL=mysql+pymysql://root:Siva%402005@your-mysql-host:3306/wiki_quiz
 GEMINI_API_KEY=AIzaSyBvIcXEetP9Nw17B3qy2QHvObAAsPwfkSM
 LLM_MODEL=gemini-2.5-flash
-ALLOWED_ORIGINS=http://localhost:5173
+ALLOWED_ORIGINS=https://your-firebase-app.web.app,http://localhost:5173
