--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,5 @@
-DB_URL=mysql+pymysql://root:Siva%402005@localhost:3306/wiki_quiz
+DATABASE_URL=mysql+pymysql://root:Siva%402005@localhost:3306/wiki_quiz
 GEMINI_API_KEY=AIzaSyDC7TgjCdOv5O3C7EfMZxThEb5zeNZJkYI
 LLM_MODEL=gemini-2.5-flash
 ALLOWED_ORIGINS=https://ai-quiz07.web.app/
+API_URL=https://ai-wiki-quiz-generator-yici.onrender.com/api
